@@ -6,15 +6,19 @@ import java.time.LocalDateTime;
 import java.time.Month;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 
 public class Main {
-    static LocalDateTime fechaSimulada = LocalDateTime.of(2025, Month.MAY, 1, 1, 0); 
-    static LocalDateTime fechaMinima = LocalDateTime.of(2025, Month.JANUARY, 1, 0, 0); 
-    static LocalDateTime fechaHoraLimite = LocalDateTime.of(2025, Month.MAY, 10, 23, 59); 
+    
+    static double costeTotalFinal = 0;
+    static double fitnessPromPorPedido = 0;
+    static int numPedidosTotales = 0;
+    static int tiempoTotal = 0;
+    static List<Planta> plantas = new ArrayList<>();
+    static List<Pedido> pedidos = new ArrayList<>();
+    static List<Camion> camiones = new ArrayList<>();
 
     //static LocalDateTime fechaSimulada = LocalDateTime.of(2025, Month.MAY, 5, 0, 1); 
     static Grid grid = new Grid(71,51);
@@ -27,70 +31,77 @@ public class Main {
  
     public static void main(String[] args) {
         try{
+            //Aqui instanciamos un objeto de la clase Main.
             Main main = new Main();
-            
-            List<Planta> plantas = new ArrayList<>();
-            Planta plantaPrincipal = new Planta("PRINCIPAL", new Nodo(0, 0));
-            Planta plantaSecundaria1 = new Planta("SECUNDARIA", new Nodo(5, 5));
-            Planta plantaSecundaria2 = new Planta("SECUNDARIA", new Nodo(10, 10));
-            plantas.add(plantaPrincipal);
-            plantas.add(plantaSecundaria1);
-            plantas.add(plantaSecundaria2);
+            LocalDateTime fechaSimulada = LocalDateTime.of(2025, Month.MAY, 1, 1, 0); 
+            LocalDateTime fechaMinima = LocalDateTime.of(2025, Month.JANUARY, 1, 0, 0); 
+            LocalDateTime fechaHoraLimite = LocalDateTime.of(2025, Month.MAY, 3, 17, 59); 
 
-            List<Pedido> pedidos = cargarPedidos("..\\data\\pedidos.txt");
-            List<Camion> camiones = cargarCamiones("..\\data\\camiones.txt",plantaPrincipal.getUbicacion());
-            cargarBloqueos("..\\data\\bloqueos.txt", grid);
-            cargaMantenimientos("..\\data\\mantenimiento.txt",camiones);
+            //Metodo que cargará todos los archivos
+            cargarArchivos();
+
+            //En esta lista se guardarán todas las asignaciones realizadas por el algoritmo genético, cambiará en cada iteración.
             List<Asignacion> asignaciones = new ArrayList<>();
+
+            //Este es el tiempo en minutos, que se incrementa en cada iteración.
+            // Ejemplo de uso: Se ejecuta el algoritmo a las 12:00pm, la siguiente iteracción será en 12:00pm + tiempo de Salto(en minutos).
             int tiempoSalto = 210;
 
+            //Se ejecutará el algoritmo genético tantas veces hasta que llegué a la fecha limite. Teniendo en cuenta que el tiempo esta aumenta en cada iteración.
             while(fechaSimulada.isBefore(fechaHoraLimite)){
-                System.out.println("\n\n\n======= INICIO DE ASIGNACION CON ALGORITMO GENETICO =================================");
-                System.out.println("Ingreso: La fecha Simulada es: "+fechaSimulada);
+                System.out.println("====INICIO: Fecha de simulación: "+fechaSimulada+"====");
+
                 List<Pedido> pedidosParaAsignar = new ArrayList<>();
                 List<Pedido> pedidosNoEntregados = new ArrayList<>();
                 List<Camion> camionesOrdenados = new ArrayList<>();
 
+                //Si las asignaciones no estan vacias, se actualizan los datos.
                 if(!asignaciones.isEmpty()){
+                    //Aqui ordenamos los camiones de forma que los que han sido asignados en la anterior ejecución, vayan primero para que sigan con sus rutas.
                     camiones.sort((a, b) -> {
-                        boolean aTieneAsignacion = a.isAsignacionSimulada() && !(a.getUbicacion().getPosX() == plantaPrincipal.getUbicacion().getPosX() && a.getUbicacion().getPosY() == plantaPrincipal.getUbicacion().getPosY());
-                        boolean bTieneAsignacion = b.isAsignacionSimulada() && !(b.getUbicacion().getPosX() == plantaPrincipal.getUbicacion().getPosX() && b.getUbicacion().getPosY() == plantaPrincipal.getUbicacion().getPosY());
+                        boolean aTieneAsignacion = a.isAsignacionSimulada() && !(a.getUbicacion().getPosX() == plantas.get(0).getUbicacion().getPosX() && a.getUbicacion().getPosY() == plantas.get(0).getUbicacion().getPosY());
+                        boolean bTieneAsignacion = b.isAsignacionSimulada() && !(b.getUbicacion().getPosX() == plantas.get(0).getUbicacion().getPosX() && b.getUbicacion().getPosY() == plantas.get(0).getUbicacion().getPosY());
 
-                        // Queremos que los que tienen pedidos (≠ 0) vayan primero
                         if (aTieneAsignacion && !bTieneAsignacion){
                             return -1;
                         } 
                         if (!aTieneAsignacion && bTieneAsignacion){
                             return 1;
                         }
-                        return 0; // si ambos son iguales (ambos 0 o ambos ≠ 0), mantenemos el orden
+                        return 0;
                     });
 
+                    //Aqui actualizamos todos los datos, que dejó la ejecución anterior.
                     pedidosNoEntregados = main.actualizarDatos(fechaSimulada, asignaciones, plantas);
+
+                    //Esto es porque en esta nueva ejecución quiero la lista vacia para guardar nuevas asignaciones.
                     asignaciones = new ArrayList<>();
-                 }
+                }
                 
+                // Esto es porque todos los pedidos que aún no han sido entregados de la anterior ejecución, se van a asignar en esta nueva ejecución.
                 for(Pedido pedido: pedidosNoEntregados){
                     pedidosParaAsignar.add(pedido);
                 }
+
+                // Ordenamos por fecha Máxima de entrega.
                 pedidos.sort(Comparator.comparing(Pedido::getFechaMaximaEntrega));
+
+                //Esto es porque los pedidos nuevos que llegan en el tiempo intermedio entre la antigua ejecución y la actual, también van.
                 for(Pedido pedido:pedidos){
                     if(pedido.estaEntre(fechaSimulada.minusMinutes(tiempoSalto), fechaSimulada) && !pedido.isEntregado()){
                         pedidosParaAsignar.add(pedido);
                     }
                 }                
+
+                System.out.println("Los pedidos a asignar son estos:");
+                for(Pedido pedido:pedidosParaAsignar){
+                    System.out.println("La ubicación del pedido es: "+pedido.getUbicacion().detallarEnString() + " y la fecha de registro es: "+pedido.getFechaRegistro()+" y la fecha máxima de entrega es: "+pedido.getFechaMaximaEntrega());
+                }
+                //Si la lista de pedidos a asignar no esta vacia, se ejecuta el algoritmo genético.
                 if(!pedidosParaAsignar.isEmpty()){
-                    long t0 = System.nanoTime();
+
                     asignaciones = main.generarSolucionInicial(pedidosParaAsignar, camiones, plantas, fechaSimulada);
-                    long t1 = System.nanoTime();
-
-                    double elapsedSec = (t1 - t0) / 1e9;
-                    System.out.printf("Optimize() tardó %.3f segundos%n", elapsedSec);
-
-                    
-                    double costeTotal = (1.0 / SolucionGA.calcularFitness(asignaciones,pedidosParaAsignar)) - 1.0;
-        
-                    System.out.printf("Función objetivo (coste total): %.3f%n", costeTotal);
+                                    
                     
                     int totalPedidos = 0;
                     // Contar pedidos asignados y calcular costos
@@ -101,30 +112,7 @@ public class Main {
                             }
                         }
                     }
-
-                    // Coste medio por pedido
-                    double costeMedio = (totalPedidos > 0 ? costeTotal / totalPedidos : 0);
-                    System.out.printf("Coste medio por pedido: %.3f%n", costeMedio);
-                    System.out.println("Y el total de pedidos es:"+totalPedidos);
-
-                    double sumaFitness = 0;
-                    for (Asignacion asignacion : asignaciones) {
-                        for (SubRuta subRuta : asignacion.getSubRutas()) {
-                            if (subRuta.getPedido() != null) {
-                                // Aproximación del coste por pedido
-                                double cPedido = costeTotal / totalPedidos;
-                                // Fitness individual
-                                sumaFitness += 1.0 / (1.0 + cPedido);
-                            }
-                        }
-                    }
-                    double fitnessMedio = (totalPedidos > 0 ? sumaFitness / totalPedidos : 0);
-                    System.out.printf("Fitness promedio por pedido: %.3f%n%n", fitnessMedio);
-
-
-
-
-
+                    /* 
                     // Confirmar asignaciones en objetos reales
                     for (Asignacion asignacion : asignaciones) {
                         for (SubRuta subRuta : asignacion.getSubRutas()) {
@@ -133,42 +121,33 @@ public class Main {
                             }
                         }
                         asignacion.getCamion().setAsignacionSimulada(true);
-                    }
-                } else {
-                    System.out.println("No hay pedidos pendientes. Con fecha simulada"+fechaSimulada);
+                    }*/
                 }
-                
 
+                //Este es para cualquier camión que no se haya asignado, y este en ruta de regreso de la anterior ejecución, asignarle su ruta de regreso.
                 for(Camion camion: camiones){
-                    //System.out.println("El codigo es: "+camion.getCodigo()+" y la ubicacion en X:"+camion.getUbicacion().getPosX()+" y la de Y:"+camion.getUbicacion().getPosY()+" y su estado de asignqacion simulada es:"+camion.isAsignacionSimulada());
                     if((camion.getUbicacion().getPosX()!=0 || camion.getUbicacion().getPosY()!=0 )&& !camion.isAsignacionSimulada()){
-                        Asignacion nuevaAsignacion = main.AsignarTrayectoriaRegreso(camion);
-                        System.out.println("Ingreso una nueva asignacion:");
+                        Asignacion nuevaAsignacion = main.AsignarTrayectoriaRegreso(camion, fechaSimulada, fechaHoraLimite);
                         asignaciones.add(nuevaAsignacion);
                     }
                 }
-
-                
-                if(asignaciones.isEmpty()){
-                    asignaciones = new ArrayList<>();
-                }
-                
+                 
                 //Visualización
-                /*VisualizadorAsignaciones.mostrarResumenAsignaciones(asignaciones,grid, fechaSimulada, pedidos, plantas);
+                
 
                 //Mostrar detalle del primer camión (ejemplo)
                 if (!asignaciones.isEmpty()) {
+                    VisualizadorAsignaciones.mostrarResumenAsignaciones(asignaciones,grid, fechaSimulada, pedidos, plantas);
                     for(Asignacion asignacion: asignaciones){
                         VisualizadorAsignaciones.mostrarDetalleCamion(asignacion, grid, fechaSimulada, pedidos, plantas);                        
                     }
-                }*/
+                }
 
                 fechaSimulada=fechaSimulada.plusMinutes(tiempoSalto);
             }
-
             
             // Mostrar pedidos no asignados
-            //VisualizadorAsignaciones.mostrarPedidosNoAsignados(pedidos);
+            VisualizadorAsignaciones.mostrarPedidosNoAsignados(pedidos);
             
             // Mostrar estado de las plantas
             //Utilidades.mostrarEstadoPlantas(plantas); 
@@ -213,11 +192,17 @@ public class Main {
         int tiempoDespuesDePartir = 0;
         int contador = 0;
         List<Pedido> pedidosAunNoEntregados = new ArrayList<>();
+        List<Asignacion> AsignacionesPorSeguir = new ArrayList<>();
+        
         for(Asignacion asignacion: asignaciones){
+            contador=0;
             asignacion.getCamion().resetSimulacion();
             asignacion.getCamion().setAsignacionSimulada(false);
             asignacion.getCamion().setSegundosFaltantesParaSalir(0);
+
+            //Si aún la asignación no se ha dado.
             if(asignacion.getFechaPartida().isAfter(fechaHora)){
+                AsignacionesPorSeguir.add(asignacion);
                 for(SubRuta subRuta: asignacion.getSubRutas()){
                     if(subRuta.getPedido()!=null){
                         pedidosAunNoEntregados.add(subRuta.getPedido());
@@ -226,47 +211,61 @@ public class Main {
                 continue;
             }
             
+            // Si la asignación ya se ha terminado.
             if(!asignacion.getSubRutas().isEmpty() && !asignacion.getSubRutas().getLast().getFechaLlegada().isAfter(fechaHora)){
                 asignacion.getCamion().setUbicacion(grid.getNodoAt(0, 0));
                 for(SubRuta subRuta: asignacion.getSubRutas()){
-                    contador++;
                     double glpConsumida = asignacion.getCamion().calcularConsumo(subRuta.getTrayectoria().size()-1);
                     asignacion.getCamion().setGlpTanqueRest(asignacion.getCamion().getGlpTanqueRest()-glpConsumida);
                     if(subRuta.getPedido()!=null){
                         subRuta.getPedido().setEntregado(true);
-                        System.out.println("El pedido con id: "+ subRuta.getPedido().getId()+" ha sido entregado");
+                       System.out.println("El pedido con id: "+ subRuta.getPedido().getId()+" ha sido entregado");
                         asignacion.getCamion().setGlpCargaRest(asignacion.getCamion().getGlpCargaRest()-subRuta.getPedido().getCantidadGlp());
                     }
                     if(Utilidades.esPlanta(subRuta.getUbicacionFin(), plantas)){
+                        Double glpCamionFaltante = asignacion.getCamion().getGlpCarga()- asignacion.getCamion().getGlpCargaRest();
+                        asignacion.getCamion().setGlpCargaRest(asignacion.getCamion().getGlpCarga());
                         Planta planta = Utilidades.obtenerPlanta(subRuta.getUbicacionFin(), plantas);
-                        planta.setGlpRest(planta.getGlpRest()- Utilidades.obtenerGlpACargar(asignacion,contador+1));
+                        planta.setGlpRest(planta.getGlpRest()- glpCamionFaltante);
                     }
                 }
+                int tiempoParaSalir = (int) Duration.between(asignacion.getSubRutas().getLast().getFechaLlegada(),fechaHora).toSeconds();
+                asignacion.getCamion().setSegundosFaltantesParaSalir(900-tiempoParaSalir);
                 continue;
             }
             
+            //Si la asignación está en camino.
             contador = 0;
             for(SubRuta subRuta: asignacion.getSubRutas()){
                 contador++;
+
+                //Si ya pasó esa subRuta
                 if(!subRuta.getFechaLlegada().isAfter(fechaHora)){
                     asignacion.getCamion().setUbicacion(subRuta.getUbicacionFin());
                     double glpConsumida = asignacion.getCamion().calcularConsumo(subRuta.getTrayectoria().size()-1);
                     asignacion.getCamion().setGlpTanqueRest(asignacion.getCamion().getGlpTanqueRest()-glpConsumida);
                     if(subRuta.getPedido()!=null){
                         subRuta.getPedido().setEntregado(true);
-                        System.out.println("El pedido con id: "+ subRuta.getPedido().getId()+" ha sido entregado");
+                       System.out.println("El pedido con id: "+ subRuta.getPedido().getId()+" ha sido entregado");
                         asignacion.getCamion().setGlpCargaRest(asignacion.getCamion().getGlpCargaRest()-subRuta.getPedido().getCantidadGlp());
                     }
                     if(Utilidades.esPlanta(subRuta.getUbicacionFin(), plantas)){
+                        Double glpCamionFaltante = asignacion.getCamion().getGlpCarga()- asignacion.getCamion().getGlpCargaRest();
+                        asignacion.getCamion().setGlpCargaRest(asignacion.getCamion().getGlpCarga());
                         Planta planta = Utilidades.obtenerPlanta(subRuta.getUbicacionFin(), plantas);
-                        planta.setGlpRest(planta.getGlpRest()- Utilidades.obtenerGlpACargar(asignacion,contador+1));
+                        planta.setGlpRest(planta.getGlpRest()- glpCamionFaltante);
                     }
-                    int tiempoParaSalir = (int) Duration.between(subRuta.getFechaLlegada(),fechaHora).toSeconds();
-                    asignacion.getCamion().setSegundosFaltantesParaSalir(900-tiempoParaSalir);
-                } else if (( !subRuta.getFechaPartida().isAfter(fechaHora) ) && subRuta.getFechaLlegada().isAfter(fechaHora)){
+                    if(subRuta.getPedido()!=null || Utilidades.esPlantaPrincipal(subRuta.getUbicacionFin(), plantas)){
+                        int tiempoParaSalir = (int) Duration.between(subRuta.getFechaLlegada(),fechaHora).toSeconds();
+                        asignacion.getCamion().setSegundosFaltantesParaSalir(900-tiempoParaSalir);
+                    }
+                } 
+
+                // Si el camión se quedó justo en su subRuta.
+                else if (( !subRuta.getFechaPartida().isAfter(fechaHora) ) && subRuta.getFechaLlegada().isAfter(fechaHora)){ 
                     tiempoDespuesDePartir = (int) Duration.between(subRuta.getFechaPartida(), fechaHora).toSeconds();
                     int distanciaRecorrida = tiempoDespuesDePartir/72;
-                    asignacion.getCamion().setUbicacion(subRuta.getTrayectoria().get(distanciaRecorrida+1));
+                    asignacion.getCamion().setUbicacion(subRuta.getTrayectoria().get(distanciaRecorrida));
                     
                     double glpConsumida = asignacion.getCamion().calcularConsumo(distanciaRecorrida);
                     asignacion.getCamion().setGlpTanqueRest(asignacion.getCamion().getGlpTanqueRest()-glpConsumida);
@@ -277,35 +276,44 @@ public class Main {
                     if(subRuta.getPedido()!=null){
                         pedidosAunNoEntregados.add(subRuta.getPedido());
                     }
+                    asignacion.getCamion().setSegundosFaltantesParaSalir(0);
+                    break;
                 } 
+                
+                //Si no llego a alcanzar la SubRuta. 
+                else {
+                    if (subRuta.getPedido() != null && !pedidosAunNoEntregados.contains(subRuta.getPedido())) {
+                        pedidosAunNoEntregados.add(subRuta.getPedido());
+                    }
+                }
             }
         }
         return pedidosAunNoEntregados;
     }
 
-    public List<Asignacion> generarSolucionInicial(List<Pedido> pedidos, List<Camion> camiones, 
-                                                 List<Planta> plantas, LocalDateTime fechaSimulada) {
+    public List<Asignacion> generarSolucionInicial(List<Pedido> pedidosParaAsignar, List<Camion> camiones, List<Planta> plantas, LocalDateTime fechaSimulada) {
+        
         List<Asignacion> asignaciones = new ArrayList<>();
-        List<Pedido> pedidosPendientes = new ArrayList<>(pedidos);
 
         // Ordenar pedidos por prioridad (fecha límite más cercana primero)
         //pedidosPendientes.sort(Comparator.comparing(Pedido::getFechaMaximaEntrega));
     
-        for (Pedido pedido : pedidosPendientes) {
+        for (Pedido pedido : pedidosParaAsignar) {
             boolean asignado = false;
             for (Camion camion : camiones) {
                 
                 //System.out.println("El camion a verificar es:"+ camion.getCodigo()+" y su simulacion estado es:"+camion.isAsignacionSimulada());
                 if(camion.isAsignacionSimulada()){
-                    continue;
+                    continue;   
                 }
                 
-                List<SubRuta> subRutas = intentarAsignarPedidoSimple(camion, pedido, plantas,pedidos);
-                if(subRutas == null){
-                   // intentarAsignarPedidoConRecarga(pedido, plantas, fechaSimulada, pedidosPendientes, asignaciones);
-                }
+                List<SubRuta> subRutas = intentarAsignarPedidoSimple(camion, pedido, plantas,pedidosParaAsignar, fechaSimulada);
+                System.out.println("La subRutas que me mandaron son:");
                 if (subRutas != null) {
                     // Confirmar asignación en objetos reales
+                    for(SubRuta subRuta: subRutas){
+                        System.out.println("La subRuta inicial es: "+subRuta.getUbicacionInicio().detallarEnString()+" y la final es: "+subRuta.getUbicacionFin().detallarEnString()+" y el camión que esta tomando es: "+camion.getCodigo());
+                    }
                     Asignacion asignacion = new Asignacion(camion, subRutas, subRutas.getFirst().getFechaPartida());
                     asignaciones.add(asignacion);
                     confirmarAsignacionSimulada(asignacion, pedido, plantas);
@@ -316,49 +324,22 @@ public class Main {
                    // System.out.println("No se pudo asignar con el camion: "+camion.getCodigo());
                 }
             }
-            
-            if (!asignado) {
-              //  System.out.println("Advertencia: No se pudo asignar pedido " + pedido.getId()+ " con cantidad de: "+ pedido.getCantidadGlp()+ " y el cliente es:"+pedido.getIdCliente()+" y su fecha maxima es: "+pedido.getFechaMaximaEntrega()+" y la fecha simulada es: "+fechaSimulada);
-              //  System.out.println("Se intentará nuevamente:");
-                //return generarSolucionInicial(pedidos, camiones, plantas, fechaSimulada);
-            }
-        }        
+        }
         return asignaciones;
     }
-/* 
-    private void AsignarDatosReales(List<Asignacion> asignaciones, List<Pedido> pedidos, List<Planta> plantas) {
-        for(Asignacion asignacion: asignaciones){
-            Camion camion = asignacion.getCamion();
-            double consumoSubRuta = 0;
-            for(SubRuta subruta: asignacion.getSubRutas()){
-                consumoSubRuta = camion.calcularConsumo(subruta.getTrayectoria().size()-1);
-                camion.setGlpTanqueRest(camion.getGlpTanqueRest()-consumoSubRuta);
-                if(Utilidades.esPedido(subruta.getUbicacionFin(), pedidos)){
-                    Pedido pedido = Utilidades.obtenerPedido(subruta.getUbicacionFin(), pedidos);
-                    camion.setGlpCargaRest(camion.getGlpCargaRest()-pedido.getCantidadGlp());
-                }
-                if(Utilidades.esPlanta(subruta.getUbicacionFin(), plantas) && subruta!=asignacion.getSubRutas().getLast()){
-                    Planta planta = Utilidades.obtenerPlanta(subruta.getUbicacionFin(), plantas);
-                    double glpACargar = 0;
-                    planta.setGlpRest(planta.getGlpRest()-glpACargar);
-                    camion.setGlpTanqueRest(camion.getGlpTanque());
-                }
-            }
-        }
-    }*/
 
-    private Asignacion AsignarTrayectoriaRegreso(Camion camion) {
+    private Asignacion AsignarTrayectoriaRegreso(Camion camion, LocalDateTime fechaSimulada, LocalDateTime fechaHoraLimite) {
         Asignacion asignacion = new Asignacion();
         List<SubRuta> subRutas = new ArrayList<>();
         SubRuta subRuta = new SubRuta(camion.getUbicacion(), grid.getNodoAt(0, 0), null);
-        Map.Entry<List<Nodo>,Integer> resultado = subRuta.generarTrayectoria(grid, fechaSimulada, fechaHoraLimite.plusDays(10));
+        Map.Entry<List<Nodo>,Integer> resultado = subRuta.generarTrayectoria(grid, fechaSimulada.plusSeconds(camion.getSegundosFaltantesParaSalir()), fechaHoraLimite.plusDays(10));
         List<Nodo> trayectoria = resultado.getKey();
         subRuta.setTrayectoria(trayectoria);
         double consumoGlp = camion.calcularConsumo(trayectoria.size()-1);
        // System.out.println("El camion es: "+camion.getCodigo()+" y "+camion.getGlpTanqueRest()+ " y el consumo a gastar es: "+ consumoGlp+ " y trayectoria es: "+trayectoria);
         if(camion.getGlpTanqueRest()>consumoGlp || trayectoria.isEmpty()){
             subRuta.setFechaPartida(fechaSimulada.plusSeconds(camion.getSegundosFaltantesParaSalir()));
-            subRuta.setFechaLlegada(subRuta.getFechaPartida().plusSeconds(Utilidades.calcularDistanciaDeTrayectoria(trayectoria)*72));
+            subRuta.setFechaLlegada(subRuta.getFechaPartida().plusSeconds((trayectoria.size()-1)*72));
             subRutas.add(subRuta);
             return new Asignacion(camion, subRutas,subRuta.getFechaPartida());
         } else {
@@ -367,121 +348,50 @@ public class Main {
        return asignacion;
     }
 
-    public List<SubRuta> intentarAsignarPedidoSimple(Camion camion, Pedido pedido, List<Planta> plantas, List<Pedido> pedidos) {
-        Camion camionSim = camion.crearCopiaSimulacion();
-        List<Planta> plantasSim = clonarListaPlantasSimulacion(plantas);
-        
-        // Opción 1: Ruta directa (UbicacionCamión -> Pedido -> Planta)
+    public List<SubRuta> intentarAsignarPedidoSimple(Camion camion, Pedido pedido, List<Planta> plantas, List<Pedido> pedidosParaAsignar, LocalDateTime fechaSimulada) {
+        // Opción 1: Ruta directa (UbicacionCamión -> Pedido -> Planta Principal)
         List<SubRuta> rutaDirecta = Arrays.asList(
-            new SubRuta(camionSim.getUbicacion(), pedido.getUbicacion(),pedido),
-            new SubRuta(pedido.getUbicacion(), plantasSim.get(0).getUbicacion(),null)
+            new SubRuta(camion.getUbicacion(), pedido.getUbicacion(),pedido),
+            new SubRuta(pedido.getUbicacion(), plantas.get(0).getUbicacion(),null)
         );
-        int segundosRetorno = verificarRutaSimulacion(camionSim, pedido, plantasSim, rutaDirecta, pedidos);
+        int segundosRetorno = verificarRutaSimulacion(camion, pedido, plantas, rutaDirecta, pedidosParaAsignar, fechaSimulada);
         if (segundosRetorno!=-1) {
-            AsignarFechasYTrayectoriaSubRutas(rutaDirecta, pedidos,plantas,camionSim,segundosRetorno);
-            if(camionSim.estaDisponibleEnRango(rutaDirecta.getFirst().getFechaPartida(), rutaDirecta.getLast().getFechaLlegada()) && !pedido.getFechaMaximaEntrega().isBefore(rutaDirecta.getFirst().getFechaLlegada())){
+            AsignarFechasYTrayectoriaSubRutas(rutaDirecta, pedidosParaAsignar,plantas,camion,segundosRetorno, fechaSimulada);
+            System.out.println("la primera es:"+ camion.estaDisponibleEnRango(rutaDirecta.getFirst().getFechaPartida(), rutaDirecta.getLast().getFechaLlegada()) + " y el segundo es:"+!pedido.getFechaMaximaEntrega().isBefore(rutaDirecta.getFirst().getFechaLlegada()));
+            System.out.println("Porque el pedido es: "+pedido.getFechaMaximaEntrega()+" y la ruta directa el primero su fecha de llegada es: "+rutaDirecta.getFirst().getFechaLlegada());
+            if(camion.estaDisponibleEnRango(rutaDirecta.getFirst().getFechaPartida(), rutaDirecta.getLast().getFechaLlegada()) && !pedido.getFechaMaximaEntrega().isBefore(rutaDirecta.getFirst().getFechaLlegada())){
+                System.out.println("Entro aquí a ruta directa");
                 return rutaDirecta;
             }
         
         } 
+        // Opción 2: Ruta con Recarga en Planta (UbicacionCamión -> Planta -> Pedido -> Planta Principal)
         for (Planta planta : plantas) {
-        // Creamos nueva simulación para cada intento
-        camionSim = camion.crearCopiaSimulacion();
-        plantasSim = clonarListaPlantasSimulacion(plantas);
-
-        List<SubRuta> rutaConRecarga = Arrays.asList(
-            new SubRuta(camionSim.getUbicacion(), planta.getUbicacion(), null),
-            new SubRuta(planta.getUbicacion(), pedido.getUbicacion(), pedido),
-            new SubRuta(pedido.getUbicacion(), plantasSim.get(0).getUbicacion(), null)
-        );
-        
-        segundosRetorno = verificarRutaSimulacion(camionSim, pedido, plantasSim, rutaConRecarga, pedidos);
-        if (segundosRetorno != -1) {
-            AsignarFechasYTrayectoriaSubRutas(rutaConRecarga, pedidos, plantas, camionSim, segundosRetorno);
-            if(camionSim.estaDisponibleEnRango(rutaConRecarga.getFirst().getFechaPartida(), 
-               rutaConRecarga.getLast().getFechaLlegada()) && 
-               !pedido.getFechaMaximaEntrega().isBefore(rutaConRecarga.getFirst().getFechaLlegada())) {
-                System.out.println("Ingresooooo a una ruta con recargaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa");
-                return rutaConRecarga;
+            List<SubRuta> rutaConRecarga = Arrays.asList(
+                new SubRuta(camion.getUbicacion(), planta.getUbicacion(), null),
+                new SubRuta(planta.getUbicacion(), pedido.getUbicacion(), pedido),
+                new SubRuta(pedido.getUbicacion(), plantas.get(0).getUbicacion(), null)
+            );
+            
+            segundosRetorno = verificarRutaSimulacion(camion, pedido, plantas, rutaConRecarga, pedidosParaAsignar, fechaSimulada);
+           // System.out.println("En la ruta con retorno, los segundos retorno dieron: "+segundosRetorno+" cuando la planta era la "+planta.getId());
+            if (segundosRetorno != -1) {
+                AsignarFechasYTrayectoriaSubRutas(rutaConRecarga, pedidosParaAsignar, plantas, camion, segundosRetorno, fechaSimulada);
+                if(camion.estaDisponibleEnRango(rutaConRecarga.getFirst().getFechaPartida(), 
+                rutaConRecarga.getLast().getFechaLlegada()) && 
+                !pedido.getFechaMaximaEntrega().isBefore(rutaConRecarga.getFirst().getFechaLlegada())) {
+                    System.out.println("Entro aquí a ruta con recarga");
+                    return rutaConRecarga;
+                }
             }
         }
-    }
         return null;
     }
 
-/* 
-    private void intentarAsignarPedidoConEntrega(Pedido pedido, List<Planta> plantas, LocalDateTime fechaHora, List<Pedido> pedidos, List<Asignacion> asignaciones){
-        for(Asignacion asignacion: asignaciones){
-           Camion camionAsignado = asignacion.getCamion().crearCopiaSimulacion();
-           List<Planta> plantasSim = clonarListaPlantasSimulacion(plantas);
-            List<SubRuta> subRutas = asignacion.getSubRutas();
-            for(Planta planta: plantas){
-                
-                List<SubRuta> rutaConRecarga = new ArrayList<>();
-                for (int i = 0; i < subRutas.size() - 1; i++) {
-                    rutaConRecarga.add(subRutas.get(i));
-                }
-                rutaConRecarga.add(new SubRuta(subRutas.get(subRutas.size() - 1).getUbicacionFin(), planta.getUbicacion())); 
-                rutaConRecarga.add(new SubRuta(planta.getUbicacion(), pedido.getUbicacion()));
-                rutaConRecarga.add(new SubRuta(pedido.getUbicacion(), plantasSim.get(0).getUbicacion())); 
-                if (verificarRutaSimulacion(camionAsignado, pedido, plantasSim, rutaConRecarga, pedidos)) {
-                    AsignarFechasYTrayectoriaSubRutas(rutaConRecarga, pedidos,plantas, camionAsignado);
-                    if(camionAsignado.estaDisponibleEnRango(rutaConRecarga.getFirst().getFechaPartida(), rutaConRecarga.getLast().getFechaLlegada())){
-                        System.out.println("Se campeonó");
-                        asignaciones.remove(asignacion);
-                        asignaciones.add(new Asignacion(camionAsignado, rutaConRecarga, rutaConRecarga.getFirst().getFechaPartida()));
-                    }
-                }
-            }
-        }
-    }
-
-    private void intentarAsignarPedidoConRecarga(Pedido pedido, List<Planta> plantas, LocalDateTime fechaHora, List<Pedido> pedidos, List<Asignacion> asignaciones) {
-        Asignacion asignacionAEliminar = null;
-        Asignacion asignacionANueva = null;
-
-        for (Asignacion asignacion : asignaciones) {
-            Camion camionAsignado = asignacion.getCamion().crearCopiaSimulacion();
-            List<Planta> plantasSim = clonarListaPlantasSimulacion(plantas);
-            List<SubRuta> subRutas = asignacion.getSubRutas();
-
-            for (Planta planta : plantas) {
-                List<SubRuta> rutaConRecarga = new ArrayList<>();
-                for (int i = 0; i < subRutas.size() - 1; i++) {
-                    rutaConRecarga.add(subRutas.get(i));
-                }
-
-                rutaConRecarga.add(new SubRuta(subRutas.get(subRutas.size() - 1).getUbicacionFin(), planta.getUbicacion(),null));
-                rutaConRecarga.add(new SubRuta(planta.getUbicacion(), pedido.getUbicacion(),pedido));
-                rutaConRecarga.add(new SubRuta(pedido.getUbicacion(), plantasSim.get(0).getUbicacion(),null));
-
-                int segundosRetorno = verificarRutaSimulacion(camionAsignado, pedido, plantasSim, rutaConRecarga, pedidos);
-                if (segundosRetorno!=-1) {
-                    AsignarFechasYTrayectoriaSubRutas(rutaConRecarga, pedidos, plantas, camionAsignado,segundosRetorno);
-                    if (camionAsignado.estaDisponibleEnRango(
-                            rutaConRecarga.getFirst().getFechaPartida(),
-                            rutaConRecarga.getLast().getFechaLlegada())) {
-
-                        System.out.println("Se campeonó");
-                        camionAsignado.setGlpCargaRestSim(camionAsignado.getGlpCargaRestSim() - pedido.getCantidadGlp());
-                        asignacionAEliminar = asignacion;
-                        asignacionANueva = new Asignacion(camionAsignado, rutaConRecarga, rutaConRecarga.getFirst().getFechaPartida());
-                        break; // Rompemos bucle interno
-                    }
-                }
-            }
-
-            if (asignacionAEliminar != null) break; 
-        }
-
-        if (asignacionAEliminar != null && asignacionANueva != null) {
-            asignaciones.remove(asignacionAEliminar);
-            asignaciones.add(asignacionANueva);
-        }
-    }*/
-
-    private void AsignarFechasYTrayectoriaSubRutas(List<SubRuta> RutaCompleta, List<Pedido> pedidos, List<Planta> plantas, Camion camion, int segundosRetorno) {
+    private void AsignarFechasYTrayectoriaSubRutas(List<SubRuta> RutaCompleta, List<Pedido> pedidos, List<Planta> plantas, Camion camion, int segundosRetorno, LocalDateTime fechaSimulada) {
+        System.out.println("La fecha sumulada es: "+ fechaSimulada);
         LocalDateTime fechaSimuladaTemp = fechaSimulada.plusSeconds(segundosRetorno);
+         System.out.println("La fecha simuladaTemp es: "+ fechaSimuladaTemp);
         for(SubRuta subRuta: RutaCompleta){
             List<Nodo> trayectoria = subRuta.getTrayectoria();
             subRuta.setTrayectoria(trayectoria);
@@ -496,123 +406,111 @@ public class Main {
 
             subRuta.setFechaLlegada(fechaSimuladaTemp);
 
+            System.out.println("La SubRuta, su fecha de partida es: "+subRuta.getFechaPartida()+" y de llegada es: "+subRuta.getFechaLlegada());
+
             if(Utilidades.esPedido(subRuta.getUbicacionFin(), pedidos) || Utilidades.esPlanta(subRuta.getUbicacionFin(), plantas)){
                 fechaSimuladaTemp = fechaSimuladaTemp.plusMinutes(15);
             }
         }
        }
 
-    private int verificarRutaSimulacion(Camion camionSim, Pedido pedido, List<Planta> plantasSim, List<SubRuta> subRutas, List<Pedido> pedidos) {
+
+    private int verificarRutaSimulacion(Camion camion, Pedido pedido, List<Planta> plantas, List<SubRuta> subRutas, List<Pedido> pedidos, LocalDateTime fechaSimulada) {
+        Camion camionSim = camion.crearCopiaSimulacion();
+        List<Planta> plantasSim = clonarListaPlantasSimulacion(plantas);
+        
         int segundosRetorno = -1;
         
         List<Nodo> trayectoria = new ArrayList<>();
         Map.Entry<List<Nodo>,Integer> resultado = null;
         int segundos = 0;
-
-        if(Utilidades.esPedido(subRutas.get(0).getUbicacionFin(), pedidos)){
-            if (camionSim.getGlpCargaRest() < pedido.getCantidadGlp()) {
-                //System.out.println("No alcanza la carga");
-                return -1;
-            }
-        }
-        
         Nodo posicionActual = camionSim.getUbicacion();
-        double tiempoRestParaSalir = 0; // en minutos
         segundos = 0;
         int segundosMinimos = 14401;
-        int segundosAñadir = 0;
-
         LocalDateTime fechaSimuladaProvisional = fechaSimulada;
-
-
-        if(fechaSimulada.isAfter(pedido.getFechaMaximaEntrega())){
-           // System.out.println("Se sobrepasa la fecha maxima de pedido");
-            return -1;
-        }
         
+
         Boolean existeAsignacion = false;
         Double distanciaCompleta = 0.0;
         int contadorWhiles = 0;
         
-    
-        int paradas15min = 0;
+
+        
         for (SubRuta subRuta : subRutas) {
-            if(Utilidades.esPedido(subRuta.getUbicacionFin(), pedidos) || (Utilidades.esPlantaPrincipal(subRuta.getUbicacionFin(), plantasSim) && subRuta!=subRutas.getLast())){
-                paradas15min++;
-            }
+            int paradas15min = 0;
             trayectoria = new ArrayList<>();
             resultado = null;
 
-           // System.out.println("Esta ingresando: X:"+subRuta.getUbicacionInicio().detallarEnString()+" y la Y:"+subRuta.getUbicacionFin().detallarEnString());
+            //Estamos generando la SubRuta que seguirá el camión
             resultado = subRuta.generarTrayectoria(grid,fechaSimuladaProvisional, Utilidades.fechaMaximaTrayectoria(subRutas,subRuta));
             trayectoria = resultado.getKey();
             segundos = resultado.getValue();
 
+            //Asignamos la trayectoria generada a la SubRuta
+            subRuta.setTrayectoria(trayectoria);
+            // Seguimos obteniendo el menor tiempo posible en el cual la trayectoria no realiza ningún cambio(Osea en ese tiempo no hay ningún bloqueo que afecte esa ruta.)
             if(segundos<segundosMinimos){
                 segundosMinimos = segundos;
-                
             }
 
-            double distancia = Utilidades.calcularDistanciaDeTrayectoria(trayectoria);
-            
+            //Aquí obtenemos la distancia en km que recorrerá el camión en esta subRuta.
+            double distancia = trayectoria.size() -1;
             distanciaCompleta += distancia;
-            fechaSimuladaProvisional = fechaSimuladaProvisional.plusSeconds((long) distancia*72);
-            subRuta.setTrayectoria(trayectoria);
-            
+
             double consumo = camionSim.calcularConsumo(distancia);
             //Aqui verificamos combustible, si aún le queda para recorrer esta subruta.
             if (camionSim.getGlpTanqueRest() < consumo) {
-                System.out.println("No le alcanza el tanque.");
                 return -1;
             }
-            
-            // Actualizar simulación
+            // Actualizamos simulación
             camionSim.setGlpTanqueRest(camionSim.getGlpTanqueRest() - consumo);
-            
-            // Si llegamos a una planta, recargamos
-            if (Utilidades.esPlanta(subRuta.getUbicacionFin(), plantasSim)) {
-                camionSim.setGlpTanqueRest(camionSim.getGlpTanque());
-                
-                // Si no es la planta principal, verificar GLP disponible
-                if (!Utilidades.esPlantaPrincipal(subRuta.getUbicacionFin(), plantasSim)) {
-                    Planta planta = Utilidades.obtenerPlanta(subRuta.getUbicacionFin(), plantasSim);
-                    if(planta==null){
-                        System.out.println("Hay un error en la asignacion de algo de las plantas.");
-                    }
-                    if (planta.getGlpRest() < pedido.getCantidadGlp()) {
-                        System.out.println("Esta en una planta, y a la planta no le alcanza el plg para que puedan cargar.");
-                        return -1;
-                    }
-                    planta.setGlpRest(planta.getGlpRest() - pedido.getCantidadGlp());
-                }
-            }
 
-            posicionActual = subRuta.getUbicacionFin();
-            if (Utilidades.esPedido(posicionActual, pedidos)){
+            //Como vemos que si se puede recorrer la SubRuta. Veremos después de cuanto tiempo saldrá para la siguiente SubRuta.
+            // Los posibles finales de la SubRuta son que: Que sea pedido, plantaPrincipal, planta secundaria o camión.
+
+            if(subRuta.getPedido()!=null){
+                paradas15min++;
+                if(camionSim.getGlpCargaRest() < pedido.getCantidadGlp()){
+                    return -1;
+                }
+            } else if (Utilidades.esPlantaPrincipal(subRuta.getUbicacionFin(), plantasSim) && subRuta!=subRutas.getLast()){
+                paradas15min++;
+                camionSim.setGlpTanqueRest(camionSim.getGlpTanque());
+                camionSim.setGlpCargaRest(camionSim.getGlpCarga());
+            } else if(Utilidades.esPlantaSecundaria(subRuta.getUbicacionFin(), plantasSim)){
+                camionSim.setGlpTanqueRest(camionSim.getGlpTanque());
+                camionSim.setGlpCargaRest(camionSim.getGlpCarga());
+                
+                Planta planta = Utilidades.obtenerPlanta(subRuta.getUbicacionFin(), plantasSim);
+                if (planta.getGlpRest() < pedido.getCantidadGlp()) {
+                    return -1;
+                }
+                planta.setGlpRest(planta.getGlpRest() - pedido.getCantidadGlp());
+            } 
+
+            //Vemos cuando tiempo será la siguiente fechaSimuladaProvisional para cuando llegué al final de la SubRuta.
+            fechaSimuladaProvisional = fechaSimuladaProvisional.plusSeconds((long) distancia*72);
+
+
+            // Como hasta ahora en este metodo VerificarRutaSimulación estamos viendo solo 1 pedido, esto solo se hará 1 vez.
+            if (subRuta.getPedido() != null) {
                 if(fechaSimuladaProvisional.isBefore(pedido.getFechaRegistro().plusHours(4))){
                     existeAsignacion = true;
-                    if(segundosMinimos==14401){
-                        segundosAñadir = (int) Duration.between(fechaSimulada, pedido.getFechaRegistro().plusHours(4)).toSeconds() - (int)(distanciaCompleta*72+(paradas15min-1)*900);
-                    }
-                    fechaSimuladaProvisional = fechaSimuladaProvisional.plusMinutes(15);
+                    if(segundosMinimos>=14401){ //Osea no hay bloqueos
+                        segundosRetorno = (int) Duration.between(fechaSimulada, pedido.getFechaRegistro().plusHours(4)).toSeconds() - (int)(distanciaCompleta*72+(paradas15min-1)*900);
+                    } else {
+                        //Aquí tengo que colocar el codigo si el camino cambia antes de las 4horas.
+                        //Tengo que ver que si cambia despues que pase por ese normal, pero si cambia antes, hay un problema.
+                    }  
                 } 
+                
             }
-          //  System.out.println("Paso todo correctamente");
 
-
+            //Agregamos las paradas de 15min para salir en la siguiente SubRuta.
+            fechaSimuladaProvisional = fechaSimuladaProvisional.plusSeconds((long) paradas15min*900);
         }
-        
-        
-        // Actualizar GLP de carga en simulación
-        if(camionSim.getGlpCargaRest() < pedido.getCantidadGlp()){
-            return -1;
-        }
-        camionSim.setGlpCargaRest(camionSim.getGlpCargaRest() - pedido.getCantidadGlp());
 
-        segundosRetorno=segundosAñadir;
-       // System.out.println("Los segundos retorno son: "+ segundosRetorno);
         return segundosRetorno;
-        //ME QUEDE AQUI
     }
     private List<Planta> clonarListaPlantasSimulacion(List<Planta> originales) {
         List<Planta> copia = new ArrayList<>();
@@ -628,7 +526,7 @@ public class Main {
         return copia;
     }
 
-    private void confirmarAsignacionSimulada(Asignacion asignacion, Pedido pedido, List<Planta> plantasReales) {
+    public void confirmarAsignacionSimulada(Asignacion asignacion, Pedido pedido, List<Planta> plantasReales) {
         asignacion.getCamion().setGlpCargaRestSim(asignacion.getCamion().getGlpCargaRest() - pedido.getCantidadGlp());
         //camionReal.setUbicacion(subRutas.get(subRutas.size()-1).getUbicacionFin()); las ubicaciones se actualizan en la siguiente ejecucion.
         int numSubRutas = asignacion.getSubRutas().size();
@@ -676,6 +574,31 @@ public class Main {
 
 
     //Carga de archivos
+    static void cargarArchivos() throws IOException {
+        //Cargamos plantas
+        Planta plantaPrincipal = new Planta("PRINCIPAL", new Nodo(0, 0));
+        Planta plantaSecundaria1 = new Planta("SECUNDARIA", new Nodo(5, 5));
+        Planta plantaSecundaria2 = new Planta("SECUNDARIA", new Nodo(10, 10));
+        plantas.add(plantaPrincipal);
+        plantas.add(plantaSecundaria1);
+        plantas.add(plantaSecundaria2);
+
+        //Cargamos pedidos
+        pedidos = cargarPedidos("..\\data\\pedidos.txt");
+        numPedidosTotales = pedidos.size();
+
+        //Cargamos camiones
+        camiones = cargarCamiones("..\\data\\camiones.txt",plantaPrincipal.getUbicacion());
+        
+        //Cargamos Bloqueos en los nodos del grid.
+        cargarBloqueos("..\\data\\bloqueos.txt", grid);
+
+        //Cargamos mantenimientos en la lista de mantenimiento de los camiones.
+        cargaMantenimientos("..\\data\\mantenimiento.txt",camiones);
+    }
+
+
+
     static List<Pedido> cargarPedidos(String archivo) throws IOException {
         List<Pedido> pedidos = new ArrayList<>();
         BufferedReader br = new BufferedReader(new FileReader(archivo));
